[gd_scene load_steps=6 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://DialogLayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://joystix monospace.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="DialogLayer" parent="." instance=ExtResource( 2 )]

[node name="TitleScreen" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="Root" type="MarginContainer" parent="TitleScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -50.0
margin_right = -100.0

[node name="VBox" type="VBoxContainer" parent="TitleScreen/Root"]
margin_right = 440.0
margin_bottom = 410.0
rect_min_size = Vector2( 0, 300 )
alignment = 1

[node name="Label" type="Label" parent="TitleScreen/Root/VBox"]
margin_top = 145.0
margin_right = 440.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 1 )
text = "Run... Away?"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="TitleScreen/Root/VBox"]
margin_top = 178.0
margin_right = 440.0
margin_bottom = 265.0

[node name="Label2" type="Label" parent="TitleScreen/Root/VBox/MarginContainer"]
margin_right = 440.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 2 )
text = "

A game using directional arrows
Space  /controller A: jump, dialogs
control/controller B: might be useful"
[connection signal="reset_level" from="DialogLayer" to="." method="_on_DialogLayer_reset_level"]
